# tum-adlr-15

./: .gitignore  README.md  __init__.py  bps_test.py  env  env1  lnn_object_detection.ipynb  play.py  pyproject.toml  random_search.py  simulation.py  train.py  train_agent.py  train_lnn.py  train_nn.py
StateTransitionTrainer/: Network.py  dataloader.py  dataset_creator.py
adlr_environments/: README.md  __init__.py  constants.py  environment_wrappers.py  setup.py  utils.py  wrapper.py
adlr_environments/environments/: __init__.py  entity.py  environment.py  levels.py
agents/: ppo_1obs_norm_params.json  ppo_1obs_params.json  ppo_2obs_params.json  ppo_3obs_params.json  random_search_results.json
bps_to_image_prediction/: datasets.py  datasets_generation.py  models.py  train_bps_to_image_nn.py
bps_to_image_prediction/lightning_logs/version_0/: events.out.tfevents.1720040998.LAPTOP-VO6061H3.17700.0
bps_to_image_prediction/lightning_logs/version_1/: events.out.tfevents.1720041073.LAPTOP-VO6061H3.21032.0
bps_to_image_prediction/lightning_logs/version_2/: events.out.tfevents.1720041155.LAPTOP-VO6061H3.936.0
bps_to_image_prediction/lightning_logs/version_20/: events.out.tfevents.1721034899.DESKTOP-DBLCQ07.5264.0
plots/: results.ipynb
state_representation/: __init__.py  bps.py  datasets.py  models.py  niklas_models.py  test_bps.py
state_representation/bps_to_image_prediction/: datasets.py  datasets_generation.py
utils/: __init__.py  config.py  constants.py  printing.py  utils.py  visualization.py
(+7 files in other folders)
